--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -55,6 +55,7 @@ jobs:
         run: |
           cat<<-EOF > run.sh
             set -xe
+            git config --global --add safe.directory /src/vendor/kokkos
             cmake ${{ inputs.additional_cmake_commands }} \
                 -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF \
                 -DSLL_SPLINES_TEST_DEGREE_MIN=1 -DSLL_SPLINES_TEST_DEGREE_MAX=7 \
@@ -64,7 +65,7 @@ jobs:
             make -j VERBOSE=1
             ctest --output-on-failure --timeout 5 --output-junit tests.xml ${{ inputs.ctest_commands }}
           EOF
-          docker run -v ${PWD}:/src:ro ghcr.io/gyselax/voicexx_env bash /src/run.sh --user 1001 -e "SLL_BUILD_TESTING" -e "POISSON_2D_TESTING"
+          docker run -v ${PWD}:/src:ro ghcr.io/gyselax/voicexx_env bash /src/run.sh -e "SLL_BUILD_TESTING" -e "POISSON_2D_TESTING"
         shell: bash
 
       #- name: Publish Test Report
