Add Vortex merger simulation
Add Vortex merger simulation: Guiding-center model with non-null solution at the O-point.

--- a/src/geometryRTheta/initialization/CMakeLists.txt
+++ b/src/geometryRTheta/initialization/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-
+# DIOCOTRON SIMULATION ------------------------------------------
 add_library(diocotron_init_eq STATIC
     diocotron_initialization_equilibrium.cpp
 )
@@ -24,3 +24,25 @@ target_link_libraries(diocotron_init_eq
 )
 
 add_library("gslx::diocotron_init_eq" ALIAS "diocotron_init_eq")
+
+
+
+# VORTEX MERGER SIMULATION --------------------------------------
+add_library(vortex_merger_init_eq INTERFACE)
+target_include_directories(vortex_merger_init_eq
+    INTERFACE
+        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>"
+)
+target_link_libraries(vortex_merger_init_eq
+    INTERFACE
+        DDC::DDC
+        #DDC::PDI_Wrapper        
+        #Eigen3::Eigen
+        
+        sll::splines
+        gslx::geometry_RTheta
+        gslx::utils
+        gslx::poisson_RTheta
+)
+
+add_library("gslx::vortex_merger_init_eq" ALIAS "vortex_merger_init_eq")
