--- a/.github/workflows/manual_tests.yml
+++ b/.github/workflows/manual_tests.yml
@@ -43,11 +43,11 @@ jobs:
     with:
       additional_cmake_commands: -DCMAKE_CXX_FLAGS="-Wall -Wno-sign-compare" -DBUILD_BENCHMARKS=ON
       ctest_commands: -LE test_on_Release_only
-      filter_tests_base: ${{ needs.Setup.outputs.base_sha }}
+      filter_tests_base: #${{ needs.Setup.outputs.base_sha }}
 
   tests_Release:
     needs: Setup
     uses: ./.github/workflows/tests.yml
     with:
       additional_cmake_commands: -DCMAKE_CXX_FLAGS="-Wall -Wno-sign-compare" -DBUILD_BENCHMARKS=ON -DCMAKE_BUILD_TYPE=Release
-      filter_tests_base: ${{ needs.Setup.outputs.base_sha }}
+      filter_tests_base: #${{ needs.Setup.outputs.base_sha }}
