Clean up and fix r-theta advection tests
Change filenames for r-theta advection tests to prevent race conditions when these tests are run in parallel. Clean up the related code. See #178

--- a/tests/geometryRTheta/advection_2d_rp/CMakeLists.txt
+++ b/tests/geometryRTheta/advection_2d_rp/CMakeLists.txt
@@ -19,7 +19,7 @@
 
 set(TIME_METHOD "CRANK_NICOLSON_METHOD")
 
-foreach(MAPPING_TYPE "CIRCULAR_MAPPING" "CZARNY_MAPPING_PHYSICAL" "CZARNY_MAPPING_PSEUDO_CARTESIAN" "DISCRETE_MAPPING")
+foreach(MAPPING_TYPE "CIRCULAR_MAPPING_PHYSICAL" "CZARNY_MAPPING_PHYSICAL" "CZARNY_MAPPING_PSEUDO_CARTESIAN" "DISCRETE_MAPPING_PSEUDO_CARTESIAN")
     foreach(SIMULATION "TRANSLATION_SIMULATION" "ROTATION_SIMULATION" "DECENTRED_ROTATION_SIMULATION")
         set(test_name "advection_${MAPPING_TYPE}__${TIME_METHOD}__${SIMULATION}")
         add_executable("${test_name}"
