GPU implementation for density calculation with debug
See !379. This PR aims at implementing the chargedensity calculation on GPUs with explicit Kokkos parallelization.

1. `parallelchargedensitycalculator` is added
2. Tests are simple regression tests with `chargedensitycalculator` which needs to be improved

--- a/src/geometryXVx/poisson/CMakeLists.txt
+++ b/src/geometryXVx/poisson/CMakeLists.txt
@@ -4,6 +4,7 @@ foreach(GEOMETRY_VARIANT IN LISTS GEOMETRY_XVx_VARIANTS_LIST)
 
 add_library("poisson_${GEOMETRY_VARIANT}" STATIC
     chargedensitycalculator.cpp
+    parallelchargedensitycalculator.cpp
     electricfield.cpp
     nullpoissonsolver.cpp
 )
