Improve IO naming conventions
In the simulations the naming conventions do not make it clear what the role of the parameter is. As a result people are frequently surprised when the number of points in the simulation does not match the value of `x_size` in the parameter file. This PR renames commonly misinterpreted parameters. Objects in the output file are also renamed so it may be necessary to update some Python scripts. The only Python scripts that I found which use these parameters are PINN and POPE however from what I can deduce from their usage they fall into the trap and misinterpret these values. As a result I have not updated these files.

See merge request gysela-developpers/gyselalibxx!391

--------------------------------------------

--- a/simulations/geometryXVx/landau/landau_twospecies.yaml
+++ b/simulations/geometryXVx/landau/landau_twospecies.yaml
@@ -1,10 +1,10 @@
-Mesh:
+SplineMesh:
   x_min: 0.0
   x_max: 12.56637061435917
-  x_size: 128
+  x_ncells: 128
   vx_min: -6.0
   vx_max: +6.0
-  vx_size: 127
+  vx_ncells: 127
 
 SpeciesInfo:
 - charge: -1
