--- a/simulations/geometryXVx/sheath/ref_simulation/sheath_ref.yaml
+++ b/simulations/geometryXVx/sheath/ref_simulation/sheath_ref.yaml
@@ -1,10 +1,10 @@
-Mesh:
+SplineMesh:
   x_min: 0.0
   x_max: 100
-  x_size: 512
+  x_ncells: 512
   vx_min: -6.0
   vx_max: +6.0
-  vx_size: 511
+  vx_ncells: 511
 
 SpeciesInfo:
 - charge: -1
