--- a/tests/geometryXVx/bump_on_tail/bumpontail.yaml
+++ b/tests/geometryXVx/bump_on_tail/bumpontail.yaml
@@ -1,10 +1,10 @@
-Mesh:
+SplineMesh:
   x_min: 0.0
   x_max: 50.
-  x_size: 256
+  x_ncells: 256
   vx_min: -8.0
   vx_max: +8.0
-  vx_size: 127
+  vx_ncells: 127
 
 SpeciesInfo:
 - charge: -1
