--- a/tests/geometryXYVxVy/landau/landau_small.yaml
+++ b/tests/geometryXYVxVy/landau/landau_small.yaml
@@ -1,16 +1,16 @@
-Mesh:
+SplineMesh:
   x_min: 0.0
   x_max: 12.56637061435917
-  x_size: 32
+  x_ncells: 32
   y_min: 0.0
   y_max: 12.56637061435917
-  y_size : 16
+  y_ncells : 16
   vx_min: -6.0
   vx_max: +6.0
-  vx_size: 63
+  vx_ncells: 63
   vy_min: -6.0
   vy_max: +6.0
-  vy_size: 31
+  vy_ncells: 31
 
 SpeciesInfo:
 - charge: -1
