--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ set(GYSELALIBXX_DEPENDENCY_POLICIES "AUTO" "EMBEDDED" "INSTALLED")
 include(CTest)
 
 ## Look for a pre-installed LAPACK
-find_package(LAPACK REQUIRED COMPONENTS CXX)
+find_package(LAPACK REQUIRED)
 
 ## Look for a pre-installed paraconf
 find_package(paraconf REQUIRED COMPONENTS C)
