Port XYVxVY charge density calculation
Port the charge density calculation for the XYVxVY geometry to GPU by updating the ChargeDensityCalculator method to use quadrature coefficients. The parallel implementation is analogous to the implementation in the XVx geometry.

See merge request gysela-developpers/gyselalibxx!392

--------------------------------------------

--- a/simulations/geometryXYVxVy/landau/CMakeLists.txt
+++ b/simulations/geometryXYVxVy/landau/CMakeLists.txt
@@ -15,6 +15,7 @@ target_link_libraries(landau4d_fft
         gslx::advection
         gslx::vlasov_xyvxvy
         gslx::poisson_xy
+        gslx::quadrature
         gslx::time_integration_xyvxvy
         gslx::utils
 )
