Landau4D GPU porting
Landau4D is rebased on ddc splines and entirely ported on GPU.

See merge request gysela-developpers/gyselalibxx!374

--------------------------------------------

Co-authored-by: Emily Bourne <emily.bourne@epfl.ch>

--- a/src/geometryXYVxVy/geometry/CMakeLists.txt
+++ b/src/geometryXYVxVy/geometry/CMakeLists.txt
@@ -9,7 +9,7 @@ target_include_directories("geometry_xyvxvy"
 )
 target_link_libraries("geometry_xyvxvy" INTERFACE
     DDC::DDC
-    sll::splines
     gslx::speciesinfo
+    gslx::utils
 )
 add_library("gslx::geometry_xyvxvy" ALIAS "geometry_xyvxvy")
