Advection field in RP instead of XY
For the merge ---------------------------------------------------------

Add in addition of the advection field in XY, an advection field in RP.
Add a AdvectionFieldFinder class which computes advection field along XY and
along RP.
Modify BslAdvectionRP class to add an operator for the advection field on RP
as input.
Remove the VlasovPoissonSolver class.

For the MR ------------------------------------------------------------

The advection operator will take the advection field in RP instead of XY.

TO DO -----------------------------------------------------------------
- [x] Check documentations and formulas;
- [x] Remove vlasovpoissonsolver.hpp and associated documentation;
- [x] Add tests;
- [x] Remove modifications made for the diocotron simulation, only use the advection field in XY;
- [x] Add a case in the predictor-corrector operators? or these operators are made for the guiding-center case and better work with only  advection field in XY;

- Create a function set_initialization which return exact_rho.initialisation and exact_rho.equilibrium in diocotron simulation?
- Check if the following had been done or has to be done:
* geometry_PC -> foot finder
* advect_feet -> foot finder
* compute advection field -> PseudoCartesian()
* remove AdvectionDomain and give PseudoCartesian mapping instead

See merge request gysela-developpers/gyselalibxx!309

--------------------------------------------

Co-authored-by: Pauline Vidal <pauline.vidal@ipp.mpg.de>
Co-authored-by: Emily Bourne <emily.bourne@epfl.ch>
Co-authored-by: Thomas Padioleau <thomas.padioleau@cea.fr>
Co-authored-by: Baptiste Legouix <stilynx51@gmail.com>

--- a/src/geometryRTheta/time_solver/CMakeLists.txt
+++ b/src/geometryRTheta/time_solver/CMakeLists.txt
@@ -17,6 +17,7 @@ target_link_libraries(time_integration_rp
         gslx::advection_rp
         gslx::utils
         gslx::timestepper
+        gslx::advection_field_RTheta
 )
 add_library(gslx::time_integration_rp ALIAS time_integration_rp)
 
