--- a/tests/geometryRTheta/CMakeLists.txt
+++ b/tests/geometryRTheta/CMakeLists.txt
@@ -9,3 +9,4 @@ endif()
 add_subdirectory(2d_spline_interpolator)
 add_subdirectory(quadrature)
 add_subdirectory(advection_2d_rp)
+add_subdirectory(advection_field_rp)
