--- a/src/geometryRTheta/CMakeLists.txt
+++ b/src/geometryRTheta/CMakeLists.txt
@@ -8,5 +8,6 @@ add_subdirectory(initialization)
 add_subdirectory(interpolation)
 add_subdirectory(poisson)
 add_subdirectory(time_solver)
+add_subdirectory(advection_field)
 
 
