--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -130,24 +130,18 @@ documentation:
   stage: test
   needs: []
   image: ghcr.io/gyselax/gyselalibxx_env
-  variables:
-    GIT_SUBMODULE_STRATEGY: recursive
   before_script: |
     git config --global --add safe.directory $CI_PROJECT_DIR
     git fetch origin ${CI_MERGE_REQUEST_TARGET_BRANCH_NAME} --recurse-submodules=no
   script: |
-    git config --global --add safe.directory /builds/gysela-developpers/gyselalibxx/vendor/kokkos
     rm -rf build || true
     # Make docs
-    mkdir build
-    cd build
-    cmake -DCMAKE_CXX_FLAGS=-Wall -DBUILD_DOCUMENTATION=ON -DKokkos_ENABLE_DEPRECATED_CODE_3=OFF -DKokkos_ENABLE_DEPRECATION_WARNINGS=OFF ..
-    make doc
-    cd ..
+    cmake -DGYSELALIBXX_COMPILE_SOURCE=OFF -DBUILD_DOCUMENTATION=1 -B build-docs .
+    cmake --build build-docs
     # Get files which have changed in this merge request
     git diff origin/${CI_MERGE_REQUEST_TARGET_BRANCH_NAME}..HEAD --no-indent-heuristic --unified=0 --output=pull_diff.txt --no-color
     # Filter documentation messages to only complain about modified files
-    python3 ci_tools/check_documentation.py pull_diff.txt build/docs/doxygen.log
+    python3 ci_tools/check_documentation.py pull_diff.txt build-docs/docs/doxygen.log
     git diff origin/${CI_MERGE_REQUEST_TARGET_BRANCH_NAME}..HEAD --no-indent-heuristic --unified=0 --output=pull_new_files.txt --no-color --diff-filter=A
     python3 ci_tools/check_readme_presence.py pull_new_files.txt
   allow_failure: true
