Add a first version of the 5D geometry in (tor1,tor2,tor3,vpar,mu)
This version is a temporary step that will quickly be moved to a 4D geometry (tor1,tor2,vpar,mu) because we realized the strategy to create directly a 5D geometry with only one point in tor3 direction is not a good idea.
The interest of merging this temporary branch is due to the fact that it contains,
- a first example of HDF5 file reading (initialized from external python scripts developed in [gysela_io project](https://gitlab.maisondelasimulation.fr/gysela-developpers/gysela_io) 
- a first coupling with collision operator developed within [koliop library](https://gitlab.com/cines/code.gysela/libkoliop)
- Adastra configuration

See merge request gysela-developpers/gyselalibxx!405

--------------------------------------------

Co-authored-by: Etienne Malaboeuf <eti.malaboeuf@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,10 +73,10 @@ if("${BUILD_TESTING}")
   if("${GYSELALIBXX_GTest_DEPENDENCY_POLICY}" STREQUAL "AUTO")
     find_package(GTest "1.12" QUIET)
     if(NOT "${GTest_FOUND}")
-      add_subdirectory("vendor/googletest/" "googletest")
+      add_subdirectory("vendor/googletest/" "googletest") # SYSTEM)
     endif()
   elseif("${GYSELALIBXX_GTest_DEPENDENCY_POLICY}" STREQUAL "EMBEDDED")
-    add_subdirectory("vendor/googletest/" "googletest")
+    add_subdirectory("vendor/googletest/" "googletest") # SYSTEM)
   elseif("${GYSELALIBXX_GTest_DEPENDENCY_POLICY}" STREQUAL "INSTALLED")
     find_package(GTest "1.12" REQUIRED)
   endif()
@@ -94,12 +94,12 @@ if("${BUILD_BENCHMARKS}")
       if(NOT "${benchmark_FOUND}")
         option(BENCHMARK_ENABLE_TESTING "Enable testing of the benchmark library." OFF)
         option(BENCHMARK_ENABLE_INSTALL "Enable installation of benchmark. (Projects embedding benchmark may want to turn this OFF.)" OFF)
-        add_subdirectory("vendor/benchmark/" "benchmark")
+        add_subdirectory("vendor/benchmark/" "benchmark") # SYSTEM)
       endif()
     elseif("${GYSELALIBXX_benchmark_DEPENDENCY_POLICY}" STREQUAL "EMBEDDED")
       option(BENCHMARK_ENABLE_TESTING "Enable testing of the benchmark library." OFF)
       option(BENCHMARK_ENABLE_INSTALL "Enable installation of benchmark. (Projects embedding benchmark may want to turn this OFF.)" OFF)
-      add_subdirectory("vendor/benchmark/" "benchmark")
+      add_subdirectory("vendor/benchmark/" "benchmark") # SYSTEM)
     elseif("${GYSELALIBXX_benchmark_DEPENDENCY_POLICY}" STREQUAL "INSTALLED")
       find_package(benchmark "1.6" REQUIRED)
     endif()
@@ -113,11 +113,11 @@ if("${GYSELALIBXX_mdspan_DEPENDENCY_POLICY}" STREQUAL "AUTO")
   find_package(mdspan "0.3" QUIET)
   if(NOT "${mdspan_FOUND}")
     set(MDSPAN_CXX_STANDARD "${CMAKE_CXX_STANDARD}" CACHE STRING "Override the default CXX_STANDARD to compile with" FORCE)
-    add_subdirectory("vendor/mdspan/" "mdspan")
+    add_subdirectory("vendor/mdspan/" "mdspan") # SYSTEM)
   endif()
 elseif("${GYSELALIBXX_mdspan_DEPENDENCY_POLICY}" STREQUAL "EMBEDDED")
   set(MDSPAN_CXX_STANDARD "${CMAKE_CXX_STANDARD}" CACHE STRING "Override the default CXX_STANDARD to compile with" FORCE)
-  add_subdirectory("vendor/mdspan/" "mdspan")
+  add_subdirectory("vendor/mdspan/" "mdspan") # SYSTEM)
 elseif("${GYSELALIBXX_mdspan_DEPENDENCY_POLICY}" STREQUAL "INSTALLED")
   find_package(mdspan "0.3" REQUIRED)
 endif()
@@ -127,21 +127,26 @@ if("${Kokkos_ENABLE_CUDA}")
   option(Kokkos_ENABLE_CUDA_CONSTEXPR "Whether to activate experimental relaxed constexpr functions" ON)
   option(Kokkos_ENABLE_CUDA_RELOCATABLE_DEVICE_CODE "Whether to enable relocatable device code (RDC) for CUDA" ON)
 endif()
-add_subdirectory("vendor/kokkos/" "kokkos")
+add_subdirectory("vendor/kokkos/" "kokkos") # SYSTEM)
 
 find_package (Eigen3 3.3 NO_MODULE)
 
 if (NOT EIGEN3_FOUND)
   ## Use Eigen from `vendor/`
   set(EIGEN_BUILD_DOC OFF CACHE BOOL "Don't build eigen docs")
-  add_subdirectory("vendor/eigen/" "eigen")
+  add_subdirectory("vendor/eigen/" "eigen") # SYSTEM)
 endif (NOT EIGEN3_FOUND)
 
 ## Use the discrete domain computation library (ddc) from `vendor/`
-add_subdirectory("vendor/ddc/" "ddc")
+add_subdirectory("vendor/ddc/" "ddc") # SYSTEM)
 
 ## Use selalib's splines from `vendor/`
-add_subdirectory("vendor/sll/" "sll")
+add_subdirectory("vendor/sll/" "sll") # SYSTEM)
+
+# TODO(Etienne M): We may have to handle kokkos kernel in the same way.
+set(koliop_ENABLE_Kokkos "SUBDIRECTORY" CACHE STRING "")
+set(koliop_BUILD_TESTING OFF CACHE BOOL "")
+add_subdirectory("vendor/koliop/" "koliop") # SYSTEM)
 
 ## Use the kokkos-tools for profiling purpose from `vendor/`
 include(vendor/kokkos-tools/cmake/utils.cmake)
