--- a/simulations/CMakeLists.txt
+++ b/simulations/CMakeLists.txt
@@ -3,4 +3,5 @@
 add_subdirectory(geometryXVx)
 add_subdirectory(geometryRTheta)
 add_subdirectory(geometryXYVxVy)
+add_subdirectory(geometry5D)
 add_subdirectory(utilities)
