--- a/.gitmodules
+++ b/.gitmodules
@@ -14,6 +14,9 @@
 [submodule "vendor/eigen"]
 	path = vendor/eigen
 	url = https://gitlab.com/libeigen/eigen.git
+[submodule "vendor/koliop"]
+	path = vendor/koliop
+	url = https://gitlab.com/cines/code.gysela/koliop.git
 [submodule "vendor/kokkos-tools"]
 	path = vendor/kokkos-tools
 	url = https://github.com/kokkos/kokkos-tools.git
