--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(utils)
 add_subdirectory(speciesinfo)
 add_subdirectory(paraconfpp)
 add_subdirectory(quadrature)
+add_subdirectory(geometry5D)
 add_subdirectory(geometryXVx)
 add_subdirectory(geometryRTheta)
 add_subdirectory(geometryXYVxVy)
