--- a/src/speciesinfo/CMakeLists.txt
+++ b/src/speciesinfo/CMakeLists.txt
@@ -12,3 +12,12 @@ target_link_libraries(speciesinfo INTERFACE
     sll::SLL
 )
 add_library(gslx::speciesinfo ALIAS speciesinfo)
+
+
+add_library(moments INTERFACE)
+target_include_directories(moments
+    INTERFACE
+        "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>")
+target_link_libraries(moments INTERFACE
+    DDC::DDC)
+add_library(gslx::moments ALIAS moments)
