Disable unused kokkos-kernel components & 5D collision operator (koliop) update v0.0.17 (all to all collisions)
- Update koliop to support collisions of all species against all species for a single operator instance. The Fortran version expect the code to process collisions against only one species as the work is parallelized on species across ranks.
- Until now, the only consumer of kk kernels is the 5D collision operator (koliop). This should change in the coming month. To anticipate the change and smooth outhe usage kk kernels, we are no longer pulling in through CMake's fetchcontent inside of koliop, instead we have a kk kernels submodule. Koliop uses the submodule kk kernels and future kk kernels users are expected to use that too.

NOTE: we probably want to keep kk kernels and kkos in sync.

See merge request gysela-developpers/gyselalibxx!437

--------------------------------------------

Co-authored-by: Etienne Malaboeuf <eti.malaboeuf@gmail.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,6 @@
 [submodule "vendor/kokkos-tools"]
 	path = vendor/kokkos-tools
 	url = https://github.com/kokkos/kokkos-tools.git
+[submodule "vendor/kokkos-kernels"]
+	path = vendor/kokkos-kernels
+	url = https://github.com/kokkos/kokkos-kernels.git
