Don't require bit reproducable for bump on tail and landau restart tests
Set an absolute and relative tolerance of 1e-14 on parallel tests (OpenMP and Cuda). The tolerance is set to 0.0 for serial tests. This is a stop-gap solution until a physically relevant tolerance can be found.

See merge request gysela-developpers/gyselalibxx!454

--------------------------------------------

Co-authored-by: Emily Bourne <emily.bourne@epfl.ch>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,9 @@ cmake_tests:
   extends: .cmake_tests
   image: ghcr.io/gyselax/gyselalibxx_env
   timeout: 2 hours
+  variables:
+    RELATIVE_RESTART_TOLERANCE: '0.0'
+    ABSOLUTE_RESTART_TOLERANCE: '0.0'
   script: |
     set -x
     git config --global --add safe.directory /builds/gysela-developpers/gyselalibxx/vendor/kokkos
@@ -24,6 +27,9 @@ cmake_tests:
 cmake_tests_Release:
   extends: .cmake_tests
   image: ghcr.io/gyselax/gyselalibxx_env
+  variables:
+    RELATIVE_RESTART_TOLERANCE: '0.0'
+    ABSOLUTE_RESTART_TOLERANCE: '0.0'
   script: |
     set -x
     git config --global --add safe.directory /builds/gysela-developpers/gyselalibxx/vendor/kokkos
@@ -47,6 +53,9 @@ cmake_tests_Release:
 cmake_tests_Release_OMP:
   extends: .cmake_tests
   image: ghcr.io/gyselax/gyselalibxx_env
+  variables:
+    RELATIVE_RESTART_TOLERANCE: '1e-14'
+    ABSOLUTE_RESTART_TOLERANCE: '1e-14'
   script: |
     set -x
     git config --global --add safe.directory /builds/gysela-developpers/gyselalibxx/vendor/kokkos
@@ -71,6 +80,9 @@ cmake_tests_Release_GPU:
   extends: .cmake_tests
   tags:
     - persee
+  variables:
+    RELATIVE_RESTART_TOLERANCE: '1e-14'
+    ABSOLUTE_RESTART_TOLERANCE: '1e-14'
   before_script: |
     . /data/gyselarunner/spack-0.20.0/share/spack/setup-env.sh
     spack load gcc@11
