--- a/tests/geometryXVx/sheath/CMakeLists.txt
+++ b/tests/geometryXVx/sheath/CMakeLists.txt
@@ -1,11 +1,12 @@
 # SPDX-License-Identifier: MIT
 
-cmake_minimum_required(VERSION 3.15)
+find_package(Python3 REQUIRED COMPONENTS Interpreter)
 
 add_test(NAME TestSimulationSheathRestart_xperiod_vx
     COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_sheath_restart.sh"
         "${PROJECT_SOURCE_DIR}"
         "$<TARGET_FILE:sheath_xperiod_vx>"
+        "$<TARGET_FILE:Python3::Interpreter>"
         "restart")
 set_property(TEST TestSimulationSheathRestart_xperiod_vx PROPERTY TIMEOUT 200)
 set_property(TEST TestSimulationSheathRestart_xperiod_vx PROPERTY COST 100)
