--- a/tests/geometryXVx/bump_on_tail/CMakeLists.txt
+++ b/tests/geometryXVx/bump_on_tail/CMakeLists.txt
@@ -1,7 +1,5 @@
 # SPDX-License-Identifier: MIT
 
-cmake_minimum_required(VERSION 3.15)
-
 find_package(Python3 REQUIRED COMPONENTS Interpreter)
 
 add_test(NAME TestSimulationBumpontailFFT
@@ -17,6 +15,7 @@ add_test(NAME TestSimulationBumpontailRestartFFT_XVx
     COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_bumpontail_restart.sh"
         "${PROJECT_SOURCE_DIR}"
         "$<TARGET_FILE:bumpontail_fft>"
+        "$<TARGET_FILE:Python3::Interpreter>"
         "restart")
 set_property(TEST TestSimulationBumpontailRestartFFT_XVx PROPERTY TIMEOUT 200)
 set_property(TEST TestSimulationBumpontailRestartFFT_XVx PROPERTY COST 100)
@@ -35,6 +34,7 @@ add_test(NAME TestSimulationBumpontailRestartFemUniform_xperiod_vx
     COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_bumpontail_restart.sh"
         "${PROJECT_SOURCE_DIR}"
         "$<TARGET_FILE:bumpontail_fem_uniform_xperiod_vx>"
+        "$<TARGET_FILE:Python3::Interpreter>"
         "restart")
 set_property(TEST TestSimulationBumpontailRestartFemUniform_xperiod_vx PROPERTY TIMEOUT 200)
 set_property(TEST TestSimulationBumpontailRestartFemUniform_xperiod_vx PROPERTY COST 100)
