--- a/tests/geometryXVx/landau/CMakeLists.txt
+++ b/tests/geometryXVx/landau/CMakeLists.txt
@@ -1,7 +1,5 @@
 # SPDX-License-Identifier: MIT
 
-cmake_minimum_required(VERSION 3.15)
-
 find_package(Python3 REQUIRED COMPONENTS Interpreter)
 
 add_test(NAME TestSimulationLandauFFT_XVx
@@ -17,6 +15,7 @@ add_test(NAME TestSimulationLandauRestartFFT_XVx
     COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_landau_restart.sh"
         "${PROJECT_SOURCE_DIR}"
         "$<TARGET_FILE:landau_fft>"
+        "$<TARGET_FILE:Python3::Interpreter>"
         "restart")
 set_property(TEST TestSimulationLandauRestartFFT_XVx PROPERTY TIMEOUT 200)
 set_property(TEST TestSimulationLandauRestartFFT_XVx PROPERTY COST 100)
@@ -35,6 +34,7 @@ add_test(NAME TestSimulationLandauRestartFemUniform_xperiod_vx
     COMMAND bash "${CMAKE_CURRENT_SOURCE_DIR}/test_landau_restart.sh"
         "${PROJECT_SOURCE_DIR}"
         "$<TARGET_FILE:landau_fem_uniform_xperiod_vx>"
+        "$<TARGET_FILE:Python3::Interpreter>"
         "restart")
 set_property(TEST TestSimulationLandauRestartFemUniform_xperiod_vx PROPERTY TIMEOUT 200)
 set_property(TEST TestSimulationLandauRestartFemUniform_xperiod_vx PROPERTY COST 100)
