Add tests for advection
Implement test for characteristics foot+interpolation step which are gathered in advection operators. Tests include both spatial and velocity batched advection operators:

* X dimension : Splines interpolator
* Vx dimension: Splines and Lagrange interpolators

Closes #167

See merge request gysela-developpers/gyselalibxx!348

--- a/tests/geometryXVx/CMakeLists.txt
+++ b/tests/geometryXVx/CMakeLists.txt
@@ -59,6 +59,26 @@ target_link_libraries(unit_tests_lagrange
 gtest_discover_tests(unit_tests_lagrange
     TEST_SUFFIX "_${lagrange}")
 
+add_executable(unit_tests_advection
+    velocityadvection.cpp
+    spatialadvection.cpp
+    ../main.cpp
+)
+
+target_compile_features(unit_tests_advection PUBLIC cxx_std_17)
+target_link_libraries(unit_tests_advection	 
+    PUBLIC
+        GTest::gtest
+        GTest::gmock
+        gslx::interpolation
+	gslx::advection
+	gslx::geometry_xperiod_vx
+
+)
+gtest_discover_tests(unit_tests_advection 
+    TEST_SUFFIX "_${advection}")
+
+
 target_sources(unit_tests_xperiod_vx
     PRIVATE
         femperiodicpoissonsolver.cpp
